--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-scale": "^4.0.8",
     "@types/d3-selection": "^3.0.10",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
